# sales_guru

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
knowledge/: leads.csv
src/sales_guru/: __init__.py  crew.py  error_handling.py  llm_manager.py  logging_config.py  main.py  schemas.py  supervisors.py  task_monitor.py
src/sales_guru/config/: __init__.py  agents.yaml  llm_config.yaml  tasks.yaml
src/sales_guru/tools/: __init__.py  example_generator.py  json_to_markdown.py  task_validator.py
tests/: test_csv_functionality.py  test_markdown_conversion.py  test_validation.py
