[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales_guru"
version = "0.1.0"
description = "Sales Guru AI assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "crewai",
    "crewai-tools",
    "python-dotenv",
]

[project.scripts]
run_crew = "sales_guru.main:run"
train_crew = "sales_guru.main:train"
replay_crew = "sales_guru.main:replay"
test_crew = "sales_guru.main:test"

[tool.setuptools]
packages = ["sales_guru"]
package-dir = {"" = "src"}
